Changed the background

--- a/style.css
+++ b/style.css
@@ -8,13 +8,16 @@
 body{
     background: #080808;
     color: #DCDCDC;
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
 
 }
 
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background-02.png);
+    background-image: url(images/background-03.png);
     background-position: center;
     background-size: cover;
 }
@@ -86,7 +89,7 @@ nav ul li a:hover::after{
 .headshot{
     position: absolute;
     left: 50%;
-    top: 25%;
+    top: 20%;
     transform: translate(-50%, -50%);
     width: 243px;
     height: 300px;
@@ -145,27 +148,27 @@ h1{
     font-size: 25px;
     position: absolute;
     left: 50%;
-    top: 45%;
+    top: 35%;
     transform: translate(-50%, -50%);
 }
 
 .github{
     position: absolute;
-    left: 37%;
-    top: 60%;
+    left: 35%;
+    top: 65%;
     transform: translate(-50%, -50%);
 }
 
 .linkedin{
     position: absolute;
     left: 50%;
-    top: 60%;
+    top: 65%;
     transform: translate(-50%, -50%);
 }
 
 .email{
     position: absolute;
-    left: 63%;
-    top: 61%;
+    left: 65%;
+    top: 65%;
     transform: translate(-50%, -50%);
 }
